seedboxk8s/applications/sonarr/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - image: linuxserver/sonarr
          name: sonarr
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: sonarr-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: sonarr-pvc
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
