seedboxk8s/applications/sonarr/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: tortuga
spec:
  replicas: 1
  serviceName: sonarr
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-sonarr/releases
        - image: ghcr.io/linuxserver/sonarr:4.0.20.3014-ls327
          name: sonarr
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: sonarr-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: sonarr-config-pvc
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
