seedboxk8s/applications/sonarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: sonarr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8989
