seedboxk8s/applications/sonarr/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Sonarr
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sonarr
    gethomepage.dev/href: https://sonarr.${productionClusterFqdn}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: sonarr
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
